# ST_Prime_Paths

./: README.md  pyproject.toml
docs/: ALGORITHM.md
primepaths/: cfg_extract.py  cli.py  prime_paths.py
tests/: test_cfg_extract.py
